# lcar-bot

./: .gitignore  README.md
src/gcs/: CMakeLists.txt  package.xml
src/gcs/buildings/local/: building2.txt
src/gcs/include/gcs/: access_point_widget.h  access_points_container_widget.h  gcs_main_window.h  my_q_widget.h  query_widget.h  settings_widget.h  ui_adapter.h  unanswered_queries.h  vehicle_init_widget.h  vehicle_list_widget.h  vehicle_manager.h
src/gcs/include/qt/: access_point_widget.h  access_points_container_widget.h  gcs_main_window.h  my_q_widget.h  query_widget.h  settings_widget.h  ui_adapter.h  unanswered_queries.h  vehicle_init_widget.h  vehicle_list_widget.h  vehicle_manager.h
src/gcs/include/util/: command.h  data_types.h  global_vars.h  image.h  image_conversions.h  object_detection_parameters.h  settings.h  strings.h
src/gcs/include/vehicle/: backup_control.h  mavros_helper.h  uav_control.h  vehicle_control.h
src/gcs/launch/: apm_multi_udp.launch  gcs.launch  jetson.launch  jetson_sim.launch  lcarbot_multiple.launch  lcarbot_single.launch  lcarbot_single_sim.launch  lcarbot_single_sim_vision.launch  mavros_usb_cam.launch  node_UAV.launch  node_apm.launch  px4_multi_serial.launch  px4_single_gazebo.launch  px4_single_serial.launch
src/gcs/launch/helpers/: jetson.launch  mocap_indoor.launch  px4_single_serial.launch  vrpn.launch
src/gcs/map/: aero-chart-arcgis.earth  mymap.earth  rover.html  solo.html  style.css  uav.js  uavmap.html
src/gcs/resources/: GCSMainWindow.ui  SettingsWidget.ui  VehicleListWidget.ui  buildings.qrc  icons.qrc  qfi.qrc  resources.qrc  vehicles.qrc  waypoints.qrc
src/gcs/resources/buildings/: b_predictable1.txt  b_predictable2.txt  b_predictable3.txt  b_predictable4.txt  b_unpredictable1.txt  b_unpredictable2.txt  b_unpredictable3.txt  b_unpredictable4.txt  buildings  predictable1.txt  predictable2.txt
src/gcs/resources/forms/: AccessPointStats.ui  AccessPointWidget.ui  GCSMainWindow.ui  GCSMainWindow_OSG.ui  QueryWidget.ui  SettingsWidget.ui  TrialWidget.ui  UserIdWidget.ui  VehicleInitWidget.ui  distractioncontainerwidget.ui  distractionquestionwidget.ui
src/gcs/resources/vehicles/: Prototype_Quadrotor(2).mtl
src/gcs/resources/waypoints/: predictable.txt  wp_predictable.txt  wp_predictable_BACKUP.txt  wp_unpredictable.txt  wp_unpredictable_BACKUP.txt
src/gcs/src/: main.cpp
src/gcs/src/gcs/: access_point_widget.cpp  access_points_container_widget.cpp  gcs_main_window.cpp  global_vars.cpp  image.cpp  main.cpp  qfi_PFD.cpp  query_widget.cpp  settings_widget.cpp  strings.cpp  ui_adapter.cpp  unanswered_queries.cpp  vehicle_init_widget.cpp  vehicle_list_widget.cpp  vehicle_manager.cpp
src/gcs/src/gps/: gps_publisher.cpp
src/gcs/src/lib/: access_point_widget.cpp  access_points_container_widget.cpp  building.cpp  command.cpp  debug.cpp  distractioncontainerwidget.cpp  distractionquestionwidget.cpp  gcs_main_window.cpp  image_conversions.cpp  image_feed_filter.cpp  map_widget.cpp  map_widget_3d.cpp  (+18 more)
src/lcar_msgs/: CMakeLists.txt  package.xml
src/lcar_msgs/msg/: AccessPoint.msg  AccessPointStamped.msg  Door.msg  InitResponse.msg  Query.msg  Target.msg  TargetGlobal.msg  TargetLocal.msg
src/lcar_msgs/src/: ui_adapter.cpp
src/lcar_msgs/srv/: Init.srv  InitFinalAck.srv  InitRequest.srv  InitResponse.srv  ODParams.srv  WorldMap.srv
src/machine_vision/: CMakeLists.txt  package.xml
src/machine_vision/calibrations/: left.yaml  right.yaml
src/machine_vision/include/: camera_driver.h  stereo_driver.h
src/machine_vision/launch/: node_object_detection.launch  single_camera.launch  stereo_camera.launch
src/machine_vision/src/: a.out  camera_driver_node.cpp  camera_in.cpp  camera_parallel.cpp  camera_serial  camera_serial.cpp  disparity_view.cpp  machine_learning.cpp  machine_learning.h  object_avoidance.cpp  object_detect.cpp  ros_camera_driver.cpp  ros_camera_publisher.cpp  ros_camera_subscriber.cpp  ros_stereo_cam.cpp  stereo_cam_pub.cpp  stereo_driver.cpp  stereo_driver_main.cpp  stereo_driver_node.cpp  supervised_learning.cpp  test.cpp
src/mav_control/: CMakeLists.txt  package.xml
src/mav_control/src/: simple_control.cpp  simple_control.h
src/query_msgs/: CMakeLists.txt  package.xml
src/query_msgs/msg/: Door.msg  Target.msg
src/rqt_gcs/: CMakeLists.txt  CMakeLists.txt~  ChangesList (please read).txt  package.xml  package.xml~  plugin.xml  plugin.xml~  setup.py  setup.py~
src/rqt_gcs/include/: SettingsWidget.h
src/rqt_gcs/launch/: apm_multi_udp.launch  jetson.launch  lcarbot.launch  lcarbot_isolated.launch  lcarbot_multiple.launch  lcarbot_single.launch  node_apm.launch  node_machine.launch  node_mavros.launch  px4_jetson.launch  px4_multi_serial.launch  px4_single_gazebo.launch  px4_single_serial.launch
src/rqt_gcs/map/: Angular.js  epoly.js  gps.html  map.js  position.js  rover.html  solo.html  style.css  uav.js  uavmap.html
src/rqt_gcs/resources/: AccessPointStats.ui  AccessPointWidget.ui  AccessPoints.ui  AccessPointsContainerWidget.ui  AccessPointsMenu.ui  AllAccessPointsWidget.ui  GCS.ui  ImageView.ui  MainWindow.ui  MapViewer.ui  MissionCancel.ui  MissionConfirm.ui  MissionProgress.ui  MissionProgress.ui~  MissionSelect.ui  PFDWidget_custom.ui  PictureMsg.ui  QuadStats.ui  SettingsWidget.cpp.cc  SettingsWidget.ui  SimpleGCS.ui  UAVCondition.ui  UavQuestion.ui  UavStat.ui  UavStat.ui~  UnansweredQueries.ui  VehicleInitWidget.ui  WidgetADI.ui  WidgetALT.ui  WidgetASI.ui  WidgetHSI.ui  WidgetMain.ui  WidgetMain.ui.autosave  WidgetMainMap.ui  WidgetMainold.ui  WidgetNAV.ui  WidgetPFD.ui  WidgetSix.ui  WidgetTC.ui  WidgetVSI.ui  (+5 more)
src/rqt_gcs/rqt_mission/: CMakeLists.txt~  setup.py
src/rqt_gcs/rqt_question/: CMakeLists.txt~  package.xml~
src/rqt_gcs/rqt_uavstat/: package.xml~  plugin.xml~
src/rqt_gcs/srv/: pictureQuestion.srv
src/vehicle/: CMakeLists.txt  package.xml
src/vehicle/launch/: mavros.launch
src/vehicle/nodes/: backup_control_node.cpp  uav_control_test_node.cpp
src/vehicle/src/: mavros_helper.cpp  uav_control.cpp
src/web_gcs/: CMakeLists.txt  package.xml
(+263 files in other folders)
