<?xml version="1.0"?>
<package>
  <name>gcs</name>
  <version>0.0.0</version>
  <description>The salute ground control station package</description>

  <maintainer email="floydwin7@gmail.com">nasty n8</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>vehicle</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>lcar_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>lcar_msgs</run_depend>
  <run_depend>vehicle</run_depend>
  
  <run_depend>image_transport</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
