<?xml version="1.0"?>
<package>
  <name>machine_vision</name>
  <version>0.0.0</version>
  <description>This package uses a stereo camera to gather image and depth
    information to detect access points, such as doors and windows, on
    buildings. In addition to object detection and recognition using OpenCV,
    this package implemetns two types of Machine Learning including Supervised
    Learning and Reinforcement Learning.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="singh.karanvir21@gmail.com">Karanvir Panesar</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>usb_cam</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>query_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>usb_cam</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>query_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
