<?xml version="1.0"?>
<package>
  <name>mav_control</name>
  <version>0.0.0</version>
  <description>This package uses mavros to command and control a Quadrotor UAV.
    This package communicates with two other packages including web_gcs and
    machine_vision to ensure that the UAV reaches the desired location safely.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="singh.karanvir21@gmail.com">Karanvir Panesar</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
