<?xml version="1.0"?>
<package>
  <name>rqt_gcs</name>
  <version>0.0.0</version>
  <description>The rqt_gcs package</description>

  <maintainer email="hovig@todo.todo">hovig</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>mav_control</build_depend>


  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mav_control</run_depend>

  <export>
	<rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
